--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://101.53.133.59:3306/revature_training_db
-spring.datasource.username=rev_user
+spring.datasource.url=jdbc:mysql://localhost:3306/janarthanan_db
+spring.datasource.username=root
 spring.datasource.password=rev_user
+server.port=9000
