--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://101.53.133.59:3306/revature_training_db
-spring.datasource.username=rev_user
-spring.datasource.password=rev_user
+spring.datasource.url=jdbc:mysql://janarthanan-db.cilyxy4wz6lq.ap-south-1.rds.amazonaws.com:3306/jana_db
+spring.datasource.username=jana_db
+spring.datasource.password=jana_1707
+
