--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 		<spring-cloud.version>2021.0.1</spring-cloud.version>
 
 		<sonar.projectKey>laptopshop-API</sonar.projectKey>
-<sonar.organization>kv-b1-2022</sonar.organization>
+<sonar.organization>janathhanan1707</sonar.organization>
 <sonar.host.url>https://sonarcloud.io</sonar.host.url>
 
 	</properties>
